# formualizer

./: Cargo.toml
crates/formualizer-eval/src/builtins/: reference_fns.rs
crates/formualizer-eval/src/engine/: eval.rs  live_edges.rs  live_graph.rs  mod.rs
crates/formualizer-eval/src/engine/graph/: mod.rs  sheets.rs
crates/formualizer-eval/src/engine/tests/: index_named_range_accents.rs  infinite_ranges.rs  mod.rs
crates/formualizer-workbook/examples/: gen_shared_fixture.rs
crates/formualizer-workbook/tests/umya/: mod.rs  shared_formula_quoted_sheet.rs
docs/: umya-apostrophe-sheet.patch  umya-shared-formula-quoted-sheet.md  umya-shared-formula-quoted-sheet.patch
tests/fixtures/: shared_formula_quoted_sheet.xlsx
